objects/Team_Structure__c.object
<CustomObject>
    <fields>
        <fullName>AH_Name_Report__c</fullName>
        <formula>AH_Name__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AH Name Report</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AH_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AH Name</label>
        <referenceTo>Team_Structure__c</referenceTo>
        <relationshipLabel>Team Structure</relationshipLabel>
        <relationshipName>Team_Structure</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AH_RC_Code__c</fullName>
        <label>AH RC Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AH_RC_Name_EN__c</fullName>
        <label>AH RC Name EN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AH_RC_Name_TH__c</fullName>
        <label>AH RC Name TH</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AH_Short_Name__c</fullName>
        <label>AH Short Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVG_Call_Report_Customer__c</fullName>
        <formula>Total_Call_Report__c /  Total_Contacted_Customer_Port_Pool_Other__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AVG Call Report / Customer</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AVG_Call_Report_RM_Month__c</fullName>
        <defaultValue>0</defaultValue>
        <label>AVG Call Report / RM / Month</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Branch_Code__c</fullName>
        <label>Branch Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Branch_Name__c</fullName>
        <label>Branch Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call_Report_Customer_Others__c</fullName>
        <defaultValue>0</defaultValue>
        <label># Call Report Customer Others</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Call_Report_Customer_Pool__c</fullName>
        <defaultValue>0</defaultValue>
        <label># Call Report Customer Pool</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Call_Report_Customer_Port__c</fullName>
        <defaultValue>0</defaultValue>
        <label># Call Report Customer Port</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Call_Report__c</fullName>
        <defaultValue>0</defaultValue>
        <label># Call Report</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Call_Report_for_Relationship__c</fullName>
        <defaultValue>0</defaultValue>
        <label># Call Report for Relationship</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Call_Report_for_Sales__c</fullName>
        <defaultValue>0</defaultValue>
        <label># Call Report for Sales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contacted_Customer_Other_My_Penetrate__c</fullName>
        <defaultValue>0</defaultValue>
        <label># Contacted Customer Other(My Penetrate)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contacted_Customer_Other__c</fullName>
        <defaultValue>0</defaultValue>
        <label># Contacted Customer in Other</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contacted_Customer_Pool_My_Penetrate__c</fullName>
        <defaultValue>0</defaultValue>
        <label># Contacted Customer Pool(My Penetrate)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contacted_Customer_Pool__c</fullName>
        <defaultValue>0</defaultValue>
        <label># Contacted Customer in Pool</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contacted_Customer_Port_My_Penetrate__c</fullName>
        <defaultValue>0</defaultValue>
        <label># Contacted Customer Port(My Penetrate)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contacted_Customer_Port__c</fullName>
        <defaultValue>0</defaultValue>
        <label># Contacted Customer in Port</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_Other__c</fullName>
        <defaultValue>0</defaultValue>
        <label># Customer in Other</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_Pool__c</fullName>
        <defaultValue>0</defaultValue>
        <label># Customer in Pool</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_Port__c</fullName>
        <defaultValue>0</defaultValue>
        <label># Customer in Port</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Face_to_Face__c</fullName>
        <defaultValue>0</defaultValue>
        <label># Face to Face</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hub_Code__c</fullName>
        <label>Hub Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hub_Name__c</fullName>
        <label>Hub Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IS_AH__c</fullName>
        <formula>IF(OR($User.RC_Code__c = RC_Code__c, 
$User.RC_Code__c = AH_Name__r.RC_Code__c), 
True, False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IS AH</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IS_NH__c</fullName>
        <formula>IF(OR($User.RC_Code__c =  RC_Code__c, 
$User.RC_Code__c = NH_Name__r.RC_Code__c),
True, False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IS NH</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Months__c</fullName>
        <defaultValue>0</defaultValue>
        <label># Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NH_Name_Report__c</fullName>
        <formula>NH_Name__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NH Name Report</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NH_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>NH Name</label>
        <referenceTo>Team_Structure__c</referenceTo>
        <relationshipLabel>Team Structure (NH Name)</relationshipLabel>
        <relationshipName>Team_Structure1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NH_RC_Code__c</fullName>
        <label>NH RC Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NH_RC_Name_EN__c</fullName>
        <label>NH RC Name EN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NH_RC_Name_TH__c</fullName>
        <label>NH RC Name TH</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NH_Short_Name__c</fullName>
        <label>NH Short Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_EN__c</fullName>
        <label>Name EN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_Report__c</fullName>
        <formula>Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name Report</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_TH__c</fullName>
        <label>Name TH</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <formula>CASE (Type__c,
&quot;Team&quot;,  AH_Name__r.Name,
&quot;Area&quot;,  Name,
null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_RM_under_Team__c</fullName>
        <label>Number of RM under Team</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PCall_Report_Customer_Others__c</fullName>
        <formula>IF(Total_Call_Report__c &lt;&gt; 0, Call_Report_Customer_Others__c / Total_Call_Report__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Call Report Customer Others</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PCall_Report_Customer_Pool__c</fullName>
        <formula>IF(Total_Call_Report__c&lt;&gt;0,Call_Report_Customer_Pool__c  / Total_Call_Report__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Call Report Customer Pool</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PCall_Report_Customer_Port__c</fullName>
        <formula>IF(Total_Call_Report__c&lt;&gt;0,Call_Report_Customer_Port__c /  Total_Call_Report__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Call Report Customer Port</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PCall_Report_for_Relationship__c</fullName>
        <formula>IF(Total_Sales_Relationship__c &lt;&gt; 0,Call_Report_for_Relationship__c  /  Total_Sales_Relationship__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Call Report for Relationship</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PCall_Report_for_Sales__c</fullName>
        <formula>IF(Total_Sales_Relationship__c&lt;&gt;0,Call_Report_for_Sales__c/Total_Sales_Relationship__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Call Report for Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PContacted_Customer_Other_My_Penetrate__c</fullName>
        <formula>IF(Customer_Other__c&lt;&gt;0, Contacted_Customer_Other_My_Penetrate__c / Customer_Other__c ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Contacted Customer Other(My Penetrate)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PContacted_Customer_Other__c</fullName>
        <formula>IF( Customer_Other__c&lt;&gt;0, Contacted_Customer_Other__c /Customer_Other__c ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Contacted Customer Other</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PContacted_Customer_Pool_My_Penetrate__c</fullName>
        <formula>IF(Customer_Pool__c&lt;&gt;0,Contacted_Customer_Pool_My_Penetrate__c /  Customer_Pool__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Contacted Customer Pool(My Penetrate)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PContacted_Customer_Pool__c</fullName>
        <formula>IF(Customer_Pool__c&lt;&gt;0,Contacted_Customer_Pool__c /  Customer_Pool__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Contacted Customer in Pool</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PContacted_Customer_Port_My_Penetrate__c</fullName>
        <formula>IF(Customer_Port__c&lt;&gt;0,Contacted_Customer_Port_My_Penetrate__c /  Customer_Port__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Contacted Customer Port(My Penetrate)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PContacted_Customer_Port__c</fullName>
        <formula>IF(Customer_Port__c&lt;&gt;0,Contacted_Customer_Port__c /  Customer_Port__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Contacted Customer in Port</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PFace_to_Face__c</fullName>
        <formula>IF(Total_Face_to_Face_Call__c&lt;&gt;0,Face_to_Face__c / Total_Face_to_Face_Call__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Face to Face</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PPhone_Call__c</fullName>
        <formula>IF(Total_Face_to_Face_Call__c&lt;&gt;0,Phone_Call__c / Total_Face_to_Face_Call__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Phone Call</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PTotal_Call_Report__c</fullName>
        <formula>PCall_Report_Customer_Others__c + PCall_Report_Customer_Pool__c + PCall_Report_Customer_Port__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Total Call Report</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PTotal_Contacted_Customer_My_P__c</fullName>
        <formula>IF(( Customer_Port__c + Customer_Pool__c +Customer_Other__c)&lt;&gt;0,(Contacted_Customer_Pool_My_Penetrate__c + Contacted_Customer_Port_My_Penetrate__c +Contacted_Customer_Other_My_Penetrate__c )/ ( Customer_Port__c + Customer_Pool__c + Customer_Other__c ),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Total Contacted Customer(My Penetrate)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PTotal_Contacted_Customer_Port_Pool_My_P__c</fullName>
        <formula>IF(( Customer_Port__c + Customer_Pool__c )&lt;&gt;0,(Contacted_Customer_Pool_My_Penetrate__c + Contacted_Customer_Port_My_Penetrate__c )/ ( Customer_Port__c + Customer_Pool__c ),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Total Contacted Customer Port&amp;Pool(MP)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PTotal_Contacted_Customer_Port_Pool__c</fullName>
        <formula>IF(( Customer_Port__c + Customer_Pool__c )&lt;&gt;0,(Contacted_Customer_Port__c+ Contacted_Customer_Pool__c )/  ( Customer_Port__c + Customer_Pool__c ),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Total Contacted Customer Port&amp;Pool</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PTotal_Contacted_Customer__c</fullName>
        <formula>IF(( Customer_Port__c + Customer_Pool__c + Customer_Other__c)&lt;&gt;0,(Contacted_Customer_Port__c+ Contacted_Customer_Pool__c +Contacted_Customer_Other__c)/  ( Customer_Port__c + Customer_Pool__c +Customer_Other__c),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Total Contacted Customer</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PTotal_Face_to_Face_Call__c</fullName>
        <formula>PPhone_Call__c + PFace_to_Face__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Total Face to Face &amp; Call</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PTotal_Sales_Relationship__c</fullName>
        <formula>PCall_Report_for_Relationship__c + PCall_Report_for_Sales__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Total Sales &amp; Relationship</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Phone_Call__c</fullName>
        <defaultValue>0</defaultValue>
        <label># Phone Call</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RC_Code__c</fullName>
        <label>RC Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RC_Name_EN__c</fullName>
        <label>RC Name EN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RC_Name_TH__c</fullName>
        <label>RC Name TH</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RC_Short_Name__c</fullName>
        <label>RC Short Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Segment__c</fullName>
        <label>Segment</label>
        <picklist>
            <picklistValues>
                <fullName>Small</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tel__c</fullName>
        <label>Phone</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Call_Report__c</fullName>
        <formula>Call_Report_Customer_Port__c +  Call_Report_Customer_Pool__c + Call_Report_Customer_Others__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Call Report</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Contacted_Customer_My_Penetrate__c</fullName>
        <formula>Contacted_Customer_Other_My_Penetrate__c +  Contacted_Customer_Pool_My_Penetrate__c + Contacted_Customer_Port_My_Penetrate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Contacted Customer(My Penetrate)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Contacted_Customer_Port_Pool_Other__c</fullName>
        <formula>Contacted_Customer_Other__c +  Contacted_Customer_Pool__c + Contacted_Customer_Port__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Contacted Customer</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Customer__c</fullName>
        <formula>Customer_Port__c +  Customer_Pool__c +  Customer_Other__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Customer</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Face_to_Face_Call__c</fullName>
        <formula>Face_to_Face__c +  Phone_Call__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Face to Face &amp; Call</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Sales_Relationship__c</fullName>
        <formula>Call_Report_for_Relationship__c +  Call_Report_for_Sales__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Sales &amp; Relationship</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_visited_Customer__c</fullName>
        <label>Total visited Customer</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Area</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Network</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Team Structure</label>
    <listViews>
        <fullName>Area</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Area</value>
        </filters>
        <label>Area</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Network</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Network</value>
        </filters>
        <label>Network</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Team</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Team</value>
        </filters>
        <label>Team</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Team Structure Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Team Structure</pluralLabel>
    <recordTypes>
        <fullName>Area</fullName>
        <active>true</active>
        <label>Area</label>
    </recordTypes>
    <recordTypes>
        <fullName>Network</fullName>
        <active>true</active>
        <label>Network</label>
    </recordTypes>
    <recordTypes>
        <fullName>Team</fullName>
        <active>true</active>
        <label>Team</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>